# autoware2020-course

./: .gitignore  README.md
code/src/01_DevelopmentEnvironment/: aw_class2020.rviz
code/src/08_Perception_Camera/Camera-Hands-On-Solution-WS/src/lane_detection_projection/: CMakeLists.txt
code/src/08_Perception_Camera/Camera-Hands-On-Solution-WS/src/lane_detection_projection/src/: lane_detection_projection.cpp
code/src/08_Perception_Camera/Camera-Hands-On-Solution-WS/src/lane_msgs/: package.xml
code/src/08_Perception_Camera/Camera-Hands-On-Solution-WS/src/lane_msgs/msg/: LaneMarking.msg  LaneMarkingProjectedArray.msg
code/src/08_Perception_Camera/Camera-Hands-On-WS/src/lane_detection_data_loader/: CMakeLists.txt  package.xml
code/src/08_Perception_Camera/Camera-Hands-On-WS/src/lane_detection_projection/: CMakeLists.txt  package.xml
code/src/08_Perception_Camera/Camera-Hands-On-WS/src/lane_detection_projection/include/lane_detection_projection/: matrixDefines.h
code/src/08_Perception_Camera/Camera-Hands-On-WS/src/lane_detection_projection/src/: lane_detection_projection.cpp
code/src/08_Perception_Camera/Camera-Hands-On-WS/src/lane_detection_visualization/: CMakeLists.txt  package.xml
code/src/08_Perception_Camera/Camera-Hands-On-WS/src/lane_msgs/: CMakeLists.txt
code/src/08_Perception_Camera/Camera-Hands-On-WS/src/lane_msgs/msg/: LaneMarkingArray.msg  LaneMarkingArrayBoth.msg  LaneMarkingProjectedArrayBoth.msg
code/src/09_Perception_Radar/Radar-Hands-On-Solution-WS/radar_conti_ars408/src/: CMakeLists.txt
code/src/09_Perception_Radar/Radar-Hands-On-Solution-WS/radar_conti_ars408_msgs/: package.xml
code/src/09_Perception_Radar/Radar-Hands-On-Solution-WS/ros2_socketcan_bridge/ros2socketcan_bridge/: package.xml
code/src/09_Perception_Radar/Radar-Hands-On-WS/radar_conti_ars408/src/: package.xml
code/src/09_Perception_Radar/Radar-Hands-On-WS/radar_conti_ars408_msgs/: CMakeLists.txt
code/src/09_Perception_Radar/Radar-Hands-On-WS/radar_conti_ars408_msgs/msg/: ObjectExtended.msg
code/src/09_Perception_Radar/Radar-Hands-On-WS/ros2_socketcan_bridge/can_msgs/: package.xml
code/src/09_Perception_Radar/Radar-Hands-On-WS/ros2_socketcan_bridge/ros2socketcan_bridge/: CMakeLists.txt
lectures/01_DevelopmentEnvironment/: README.md  devenv.md  devenv2.md
lectures/02_ROS2_101/: Lesson2Basics.rst  README.md  presentation.html
lectures/03_ROS_Tooling/: AutowareLecture3.html  Lesson3CLI.rst  README.md
lectures/04_Platform/: README.md
lectures/05_Architectures/: README.md
lectures/06_Autoware_101/: README.md
lectures/07_Object_Perception_LIDAR/: README.md
lectures/08_Perception_Camera/: README.md
lectures/09_Perception_Radar/: README.md  Radar-Hands-On.md
lectures/10_Localization/: README.md
lectures/11_LGSVL_Simulator/: README.md  lgsvl-simulation.md
lectures/12_Motion_Control/: README.md
lectures/13_MARV_Data_Analytics/: .gitattributes  .gitignore  README.org
lectures/13_MARV_Data_Analytics/docker/: Dockerfile  build
lectures/13_MARV_Data_Analytics/scanroot/: LICENSE
lectures/13_MARV_Data_Analytics/scanroot/kitti/2011_09_26_drive_0001/: dataset.yaml  kitti_2011_09_26_drive_0001_synced_filtered.bag
lectures/13_MARV_Data_Analytics/scanroot/kitti/2011_09_26_drive_0002/: dataset.yaml  kitti_2011_09_26_drive_0002_synced_filtered.bag  tracklet_labels.xml
lectures/13_MARV_Data_Analytics/scanroot/kitti/2011_09_26_drive_0005/: dataset.yaml  kitti_2011_09_26_drive_0005_synced_filtered.bag
lectures/13_MARV_Data_Analytics/scanroot/kitti/2011_09_26_drive_0009/: dataset.yaml  kitti_2011_09_26_drive_0009_synced_filtered.bag  tracklet_labels.xml
lectures/13_MARV_Data_Analytics/scanroot/rosbag2_2020_07_23-09_26_49/: metadata.yaml  rosbag2_2020_07_23-09_26_49.db3
lectures/13_MARV_Data_Analytics/site2/: marv.conf
lectures/13_MARV_Data_Analytics/site2/code/marv_tutorials/marv_tutorials/: __init__.py  scanner.py
lectures/13_MARV_Data_Analytics/site3/: marv.conf
lectures/13_MARV_Data_Analytics/site3/code/marv_tutorials/marv_tutorials/: metadata.py
lectures/13_MARV_Data_Analytics/site4/code/marv_tutorials/: setup.py
lectures/13_MARV_Data_Analytics/site4/code/marv_tutorials/marv_tutorials/: imgsrc.py  types.capnp  video.py
lectures/13_MARV_Data_Analytics/site5/: marv.conf
lectures/13_MARV_Data_Analytics/site5/code/marv_tutorials/marv_tutorials/: bbox.py  imgsrc.py  metadata.py  (+1 more)
(+16 files in other folders)
